<resources>
    <string name="app_name">Sample</string>
    <string name="button">Button</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_multiply">×</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_3">3</string>
    <string name="_plus">+</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="equalto">=</string>
    <string name="dot">.</string>
    <string name="textview">TextView</string>
    <string name="ac">AC</string>
    <string name="backspace">⌫</string>
    <string name="modulo">%</string>
    <string name="divide">÷</string>
    <string name="brackets">( )</string>
</resources>