<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="170dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <Button
            android:id="@+id/buttonac"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/grey"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="400dp" />


        <Button
            android:id="@+id/buttonclear"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/backspace"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/buttonmodulo"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/modulo"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/buttondivide"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />


        <Button
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/buttonc"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/_plus"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <Button
            android:id="@+id/button7"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />


        <Button
            android:id="@+id/button8"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/buttona"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/_multiply"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />


        <Button
            android:id="@+id/button5"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="1000dp" />

        <Button
            android:id="@+id/buttonb"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/_minus"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonbrackets"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/grey"
            android:text="@string/brackets"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/button0"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/buttondot"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/buttond"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/equalto"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

</androidx.constraintlayout.widget.ConstraintLayout>